# mimo-commit-genius

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
hooks/: prepare-commit-msg
mimo_commit/: __init__.py  __main__.py  changelog.py  cli.py  config.py  conventional.py  git_utils.py  hook.py  mimo_client.py  prompts.py  release.py  suggester.py
scripts/: make_demo_images.py
tests/: conftest.py  test_changelog.py  test_cli.py  test_config.py  test_conventional.py  test_git_utils.py  test_hook.py  test_mimo_client.py  test_release.py  test_suggester.py
