[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimo-commit-genius"
version = "0.1.0"
description = "AI-powered commit messages, changelogs, and semantic version bumps powered by Xiaomi MiMo V2.5"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "rasop498", email = "rasopmartha@gmail.com" },
]
keywords = ["git", "commit", "changelog", "semver", "mimo", "ai", "conventional-commits"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
mimo-commit = "mimo_commit.cli:main"

[project.urls]
Homepage = "https://github.com/rasop498/mimo-commit-genius"
Repository = "https://github.com/rasop498/mimo-commit-genius"
Issues = "https://github.com/rasop498/mimo-commit-genius/issues"

[tool.setuptools.packages.find]
include = ["mimo_commit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
